--- a/top-anime-list/top-anime-list/src/index.css
+++ b/top-anime-list/top-anime-list/src/index.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Danfo&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Danfo&family=Reenie+Beanie&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap");
+@import url("https://www.fontspace.com/kobajeon-font-f79389");
 
 @tailwind base;
 @tailwind components;
@@ -9,4 +12,40 @@ body {
   background: indigo;
   background: linear-gradient(35deg, hsl(0, 0%, 0%), 40%, rgb(55, 48, 163));
   height: 100vh;
+}
+
+.cinzel-decorative-regular {
+  font-family: "Cinzel Decorative", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.cinzel-decorative-bold {
+  font-family: "Cinzel Decorative", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.cinzel-decorative-black {
+  font-family: "Cinzel Decorative", serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.reenie-beanie-regular {
+  font-family: "Reenie Beanie", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.fuzzy-bubbles-regular {
+  font-family: "Fuzzy Bubbles", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.fuzzy-bubbles-bold {
+  font-family: "Fuzzy Bubbles", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
